--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,21 @@
 
 <p>Grab the right or bottom border and drag to the desired width or height.</p>
 
-<div class="controls">
+<div class="controls row">
+    <label>Width:</label>
+    <select id='width'>
+        <option value="100">100</option>
+        <option value="200">200</option>
+        <option value="300">300</option>
+        <option value="400">400</option>
+    </select>
+    <label>Height:</label>
+    <select id='height'>
+        <option value="100">100</option>
+        <option value="200">200</option>
+        <option value="300">300</option>
+        <option value="400">400</option>
+    </select>
     <button class="js-add-new">Add new widget</button>
 </div>
 
@@ -23,14 +37,6 @@
     <ul>
         <li data-row="1" data-col="1" data-sizex="2" data-sizey="2">0</li>
         <li data-row="1" data-col="3" data-sizex="1" data-sizey="2">1</li>
-        <li data-row="1" data-col="4" data-sizex="1" data-sizey="1">2</li>
-        <li data-row="3" data-col="2" data-sizex="3" data-sizey="1">3</li>
-        <li data-row="4" data-col="1" data-sizex="1" data-sizey="1">4</li>
-        <li data-row="3" data-col="1" data-sizex="1" data-sizey="1">5</li>
-        <li data-row="4" data-col="2" data-sizex="1" data-sizey="1">6</li>
-        <li data-row="5" data-col="2" data-sizex="1" data-sizey="1">7</li>
-        <li data-row="4" data-col="4" data-sizex="1" data-sizey="1">8</li>
-        <li data-row="1" data-col="5" data-sizex="1" data-sizey="3">9</li>
     </ul>
 </div>
 
@@ -56,14 +62,19 @@
 
 
         $('.js-add-new').on('click', function () {
-            const nw = ["<li>new <button class='remove'>x</button></li>", getRandomInt(0,9, getRandomInt(1,4))];
+            const width = Number($("#width").val());
+            const height = Number($("#height").val());
+            const nw = ["<li>"+width+" "+height+" "
+                +"<button class='remove'>x</button>"
+                +"<img src='https://picsum.photos/"+width+"/"+height+"' width=90% height=90%>"
+                +"</li>",
+                width/100, height/100];
             gridster.add_widget.apply(gridster, nw);
         });
 
         $('body').on( "click", ".gridster ul > li .remove", function() {
           gridster.remove_widget($(this).closest('li'));
         });
-
     });
 </script>
 </body>
