Rename all the `dist` to `vendor`
To be consistent with the gitignore (which ignores everything in `dist`)
and the bootstrap template

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,17 +11,17 @@
   <title>CanBikeCO dashboard</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="dist/bootstrap.min.css" rel="stylesheet">
+  <link href="vendor/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/dashboard.css">
-  <link rel="stylesheet" type="text/css" href="dist/jquery.gridster.min.css">
+  <link rel="stylesheet" type="text/css" href="vendor/jquery.gridster.min.css">
 
 </head>
 
 <body>
   <!-- Bootstrap core JavaScript -->
-  <script src="dist/jquery.min.js"></script>
-  <script src="dist/jquery.gridster.min.js" type="text/javascript" charset="utf-8"></script>
-  <script src="dist/bootstrap.bundle.min.js"></script>
+  <script src="vendor/jquery.min.js"></script>
+  <script src="vendor/jquery.gridster.min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="vendor/bootstrap.bundle.min.js"></script>
 
 
   <!-- Navigation -->
