--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,16 +34,8 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            Width:
-            <select id='width'>
-            </select>
-          </li>
-          <li class="nav-item">
-            Height:
-            <select id='height'>
-                <option value="200">200</option>
-                <option value="300">300</option>
-                <option value="400">400</option>
+            Metric:
+            <select id='metric'>
             </select>
           </li>
           <li class="nav-item">
@@ -72,8 +64,7 @@
   <script type="text/javascript">
       $(function() {
           $(document).ready(function() {
-              $('#width').load('options.html');
-              $('#height').load('options.html');
+              $('#metric').load('metrics.html');
           });
       });
   </script>
@@ -94,14 +85,14 @@
   
   
           $('.js-add-new').on('click', function () {
-              const width = Number($("#width").val());
-              const height = Number($("#height").val());
+              const metric = $("#metric").val();
+              const metricLabel = $("#metric option:selected").text();
               const nw = ["<li data-min-sizex='2' data-min-sizey='2'>"
-                  +width+" "+height+" "
+                  +metricLabel+" "
                   +"<button class='remove'>x</button>"
-                  +"<img src='https://picsum.photos/"+width+"/"+height+"' width=90% height=90%>"
+                  +"<img src='plots/"+metric+".png' width=90% height=90%>"
                   +"</li>",
-                  width/100, height/100];
+                  3, 3];
               gridster.add_widget.apply(gridster, nw);
           });
   
