--- a/frontend/metrics.html
+++ b/frontend/metrics.html
@@ -1,2 +1,8 @@
-<option value="mode_confirm">Mode</option>
-<option value="mode_confirm_misc_expand">Misc Mode Expansion</option>
+<option value="ntrips_mode_confirm">Trip count by mode</option>
+<option value="ntrips_purpose">Trip count by purpose</option>
+<option value="ntrips_under10miles_mode_confirm">Trip count under 10 miles</option>
+<option value="miles_mode_confirm">Trip miles by mode</option>
+<option value="ntrips_ebike_purpose">eBike trip count by purpose</option>
+<option value="ntrips_ebike_replaced_mode">eBike trip count by replaced mode</option>
+<option value="miles_ebike_replaced_mode">eBike trip miles by replaced mode</option>
+<option value="sketch_energy_impact_ebike">Sketch of eBike energy impact</option>
