--- a/frontend/dates.html
+++ b/frontend/dates.html
@@ -1,3 +1,4 @@
 <option value="2020_11">Nov 2020</option>
 <option value="2020_12">Dec 2020</option>
 <option value="2021_01">Jan 2021</option>
+<option value="2021_02">Feb 2021</option>
