Add two new metrics to the dashboard
Metrics checked in
https://github.com/e-mission/em-public-dashboard/pull/14

This change:
- fixes the filenames to be be consistent with https://github.com/e-mission/em-public-dashboard/pull/12 by removing the trailing slash
- added new metrics to the list of metrics
- added the metrics required by CEO to the main screen and fixed the x,y locations

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -57,23 +57,33 @@
   </nav>
 
   <div class="gridster">
-      <ul>
-        <li data-row="1" data-col="1" data-sizex="4" data-sizey="4">
-	Number of trips (Nov 2020)
+    <ul>
+      <li data-row="1" data-col="1" data-sizex="4" data-sizey="4">
+        Number of trips (Nov 2020)
         <button class='remove'>x</button>
         <img src='plots/ntrips_mode_confirm_2020_11_prepilot.png' width=90% height=90%>
-	</li>
-        <li data-row="1" data-col="1" data-sizex="4" data-sizey="4">
-	Trip miles (Nov 2020)
-        <button class='remove'>x</button>
-        <img src='plots/miles_mode_confirm_2020_11_prepilot.png' width=90% height=90%>
-	</li>
-        <li data-row="1" data-col="1" data-sizex="5" data-sizey="4">
-	Energy impact (Nov 2020)
+	  </li>
+      <li data-row="1" data-col="5" data-sizex="4" data-sizey="4">
+         Trip miles by mode (Nov 2020)
+         <button class='remove'>x</button>
+         <img src='plots/miles_mode_confirm_2020_11_prepilot.png' width=90% height=90%>
+      </li>
+      <li data-row="1" data-col="9" data-sizex="6" data-sizey="4">
+         eBike Trip frequency (Nov 2020)
+         <button class='remove'>x</button>
+         <img src='plots/ntrips_ebike_per_day_2020_11_prepilot.png' width=90% height=90%>
+      </li>
+      <li data-row="5" data-col="1" data-sizex="6" data-sizey="4">
+         Average trip length (Nov 2020)
+         <button class='remove'>x</button>
+         <img src='plots/average_miles_mode_confirm_2020_11_prepilot.png' width=90% height=90%>
+      </li>
+      <li data-row="5" data-col="7" data-sizex="6" data-sizey="4">
+        Sketch of Energy impact (Nov 2020)
         <button class='remove'>x</button>
         <img src='plots/sketch_energy_impact_ebike_2020_11_prepilot.png' width=90% height=90%>
-	</li>
-      </ul>
+	  </li>
+    </ul>
   </div>
   
   <script type="text/javascript">
