--- a/frontend/metrics.html
+++ b/frontend/metrics.html
@@ -1,11 +1,11 @@
-<option value="ntrips_mode_confirm">Number of trips</option>
-<option value="ntrips_purpose">Trip count by purpose</option>
-<option value="ntrips_under10miles_mode_confirm">Trip count under 10 miles</option>
-<option value="miles_mode_confirm">Trip miles by mode</option>
-<option value="average_miles_mode_confirm">Average trip length</option>
-<option value="ntrips_per_day">Trip frequency</option>
-<option value="ntrips_ebike_purpose">eBike trip count by purpose</option>
-<option value="ntrips_ebike_replaced_mode">eBike trip count by replaced mode</option>
-<option value="miles_ebike_replaced_mode">eBike trip miles by replaced mode</option>
-<option value="ntrips_ebike_per_day">eBike Trip frequency</option>
-<option value="sketch_energy_impact_ebike">Sketch of eBike energy impact</option>
+<option value="ntrips_mode_confirm" data-sizex="4" data-sizey="4">Number of trips</option>
+<option value="ntrips_purpose" data-sizex="4" data-sizey="4">Trip count by purpose</option>
+<option value="ntrips_under10miles_mode_confirm" data-sizex="4" data-sizey="4">Trip count under 10 miles</option>
+<option value="miles_mode_confirm" data-sizex="4" data-sizey="4">Trip miles by mode</option>
+<option value="average_miles_mode_confirm" data-sizex="6" data-sizey="4">Average trip length</option>
+<option value="ntrips_per_day" data-sizex="6" data-sizey="4">Trip frequency</option>
+<option value="ntrips_ebike_purpose" data-sizex="4" data-sizey="4">eBike trip count by purpose</option>
+<option value="ntrips_ebike_replaced_mode" data-sizex="4" data-sizey="4">eBike trip count by replaced mode</option>
+<option value="miles_ebike_replaced_mode" data-sizex="4" data-sizey="4">eBike trip miles by replaced mode</option>
+<option value="ntrips_ebike_per_day" data-sizex="6" data-sizey="4">eBike Trip frequency</option>
+<option value="sketch_energy_impact_ebike" data-sizex="6" data-sizey="4">Sketch of eBike energy impact</option>
