--- a/frontend/metrics.html
+++ b/frontend/metrics.html
@@ -10,4 +10,4 @@
 <option value="miles_ebike_replaced_mode" data-sizex="4" data-sizey="4">eBike trip miles by replaced mode</option>
 <option value="ntrips_ebike_per_day" data-sizex="6" data-sizey="4">eBike Trip frequency</option>
 <option value="sketch_energy_impact_ebike" data-sizex="6" data-sizey="4">Sketch of eBike energy impact</option>
-<option value="sketch_emission_impact_ebike" data-sizex="6" data-sizey="4">Sketch of eBike emission impact</option>
+<option value="sketch_CO2impact_ebike" data-sizex="6" data-sizey="4">Sketch of eBike emission impact</option>
