Add the new metrics to the list
Testing done:
Accessed them in the frontend

--- a/frontend/metrics.html
+++ b/frontend/metrics.html
@@ -21,4 +21,7 @@
 <option value="ts_ebike_miles_proportion" data-sizex="8" data-sizey="2">Timeseries of proportion of eBike miles per user</option>
 <option value="ts_ebike_trips_proportion" data-sizex="8" data-sizey="2">Timeseries of proportion of eBike trips per user</option>
 <option value="ts_all_modes" data-sizex="8" data-sizey="2">Timeseries of all mode shares</option>
-<option value="ts_ebike_mile_individual" data-sizex="8" data-sizey="2">Timeseries of eBike proportion of individual mileage</option>
+<option value="ts_ebike_trip_individual_variation" data-sizex="8" data-sizey="2">e-bike trip variation over time</option>
+<option value="ts_ebike_mile_individual_variation" data-sizex="8" data-sizey="2">e-bike mileage variation over time</option>
+<option value="ts_ebike_trip_proportion_individual" data-sizex="20" data-sizey="20">e-bike trip proportion change over time per user</option>
+<option value="ts_ebike_mile_proportion_individual" data-sizex="20" data-sizey="20">e-bike mileage proportion change over time per user</option>
