--- a/frontend/metrics.html
+++ b/frontend/metrics.html
@@ -15,13 +15,12 @@
 <option value="ts_energy_user" data-sizex="8" data-sizey="2">Timeseries of energy</option>
 <option value="ts_emissions_vmt" data-sizex="8" data-sizey="2">Timeseries of emissions per mile</option>
 <option value="ts_users" data-sizex="8" data-sizey="2">Timeseries of active users</option>
-<option value="ts_ebike_share" data-sizex="8" data-sizey="2">Timeseries of eBike trips</option>
-<option value="ts_ebike_miles" data-sizex="8" data-sizey="2">Timeseries of eBike mode share</option>
-<option value="ts_ebike_miles_user" data-sizex="8" data-sizey="2">Timeseries of eBike miles per user</option>
+<option value="ts_ebike_share" data-sizex="8" data-sizey="2">Timeseries of cumulative eBike trips</option>
+<option value="ts_ebike_miles" data-sizex="8" data-sizey="2">Timeseries of cumulative eBike milage</option>
 <option value="ts_ebike_miles_proportion" data-sizex="8" data-sizey="2">Timeseries of proportion of eBike miles per user</option>
 <option value="ts_ebike_trips_proportion" data-sizex="8" data-sizey="2">Timeseries of proportion of eBike trips per user</option>
 <option value="ts_all_modes" data-sizex="8" data-sizey="2">Timeseries of all mode shares</option>
 <option value="ts_ebike_trip_individual_variation" data-sizex="8" data-sizey="2">e-bike trip variation over time</option>
 <option value="ts_ebike_mile_individual_variation" data-sizex="8" data-sizey="2">e-bike mileage variation over time</option>
-<option value="ts_ebike_trip_proportion_individual" data-sizex="20" data-sizey="20">e-bike trip proportion change over time per user</option>
-<option value="ts_ebike_mile_proportion_individual" data-sizex="20" data-sizey="20">e-bike mileage proportion change over time per user</option>
+<option value="ts_ebike_trip_proportion_individual" data-sizex="15" data-sizey="15">e-bike trip proportion change over time per user</option>
+<option value="ts_ebike_mile_proportion_individual" data-sizex="15" data-sizey="15">e-bike mileage proportion change over time per user</option>
