Add image alt-text

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -149,7 +149,7 @@
 								<select id="program" style="width: 100%"></select>
 							</li>
 							<li class="form-inline">
-								<button class="btn btn-danger btn-block">Add</button>
+								<button class="btn btn-danger btn-block js-add-new">Add</button>
 							</li>
 						</ul>
 					</div>
@@ -338,9 +338,19 @@
 		
 		<script type="text/javascript">
 			var gridster;
-		
-			$(function () {
-		
+
+      function loadFile(filePath) {
+        var result = null;
+        var xmlhttp = new XMLHttpRequest();
+        xmlhttp.open("GET", filePath, false);
+        xmlhttp.send();
+        if (xmlhttp.status==200) {
+          result = xmlhttp.responseText;
+        }
+        return result;
+      };
+
+			$(function () {		
 				gridster = $(".gridster ul").gridster({
 					widget_base_dimensions: [100, 100],
 					widget_margins: [5, 5],
@@ -362,10 +372,12 @@
 					const sizey = $("#metric option:selected").data("sizey");
 					const labelText = metricLabel+" "+dateLabel+" "+programLabel;
 					const imgFile = "plots/"+metric+"_"+dateVal+"_"+program+".png";
+          const altTextFile = "plots/"+metric+"_"+dateVal+"_"+program+".txt";
+          const altText = loadFile(altTextFile);
 					const nw = ["<li data-min-sizex='2' data-min-sizey='2'>"
 						+ labelText
 						+"<button class='remove'>x</button>"
-						+"<img src='"+imgFile+"' width=90% height=90%>"
+						+"<img src='"+imgFile+"' alt='"+altText+"' width=90% height=90%>"
 						+"</li>",
 						sizex, sizey];
 					gridster.add_widget.apply(gridster, nw);
