--- a/frontend/metrics_program.html
+++ b/frontend/metrics_program.html
@@ -15,21 +15,20 @@
 <option value="ts_all_modes" data-sizex="8" data-sizey="2">Timeseries of all mode shares</option>
 <!-- Mode Specific -->
 <option value="ntrips_replaced_mode" data-sizex="4" data-sizey="4">Trip miles by replaced mode</option>
-<option value="ntrips_ebike_purpose" data-sizex="4" data-sizey="4">eBike trip count by purpose</option>
-<option value="miles_ebike_replaced_mode" data-sizex="4" data-sizey="4">eBike trip miles by replaced mode</option>
+<option value="ntrips_mode_purpose" data-sizex="4" data-sizey="4">Mode specific trip count by purpose</option>
+<option value="miles_mode_replaced_mode" data-sizex="4" data-sizey="4">Mode specific trip miles by replaced mode</option>
 <option value="average_miles_replaced_mode" data-sizex="4" data-sizey="4">Average Miles for each replaced mode (w/Other)</option>
-<option value="average_miles_replaced_mode2" data-sizex="4" data-sizey="4">Average Miles for each replaced mode</option>
-<option value="ntrips_ebike_per_day" data-sizex="6" data-sizey="4">eBike Trip frequency</option>
-<option value="ntrips_ebike_per_weekday" data-sizex="6" data-sizey="4">eBike Trips per weekday</option>
+<option value="ntrips_mode_per_day" data-sizex="6" data-sizey="4">Mode specific Trip frequency</option>
+<option value="ntrips_mode_per_weekday" data-sizex="6" data-sizey="4">Mode specific Trips per weekday</option>
 <option value="sketch_all_energy_impact" data-sizex="6" data-sizey="4">Sketch of Energy Impact (kWH) by Transport Mode</option>
 <option value="sketch_all_mode_energy_impact" data-sizex="6" data-sizey="4">Sketch of Energy Impact for all confirmed trips</option>
-<option value="sketch_energy_impact_ebike" data-sizex="6" data-sizey="4">Sketch of eBike energy impact</option>
+<option value="sketch_energy_impact_mode" data-sizex="6" data-sizey="4">Sketch of Mode specific energy impact</option>
 <option value="sketch_all_mode_CO2impact" data-sizex="6" data-sizey="4">Sketch of all mode emission impact</option>
-<option value="sketch_CO2impact_ebike" data-sizex="6" data-sizey="4">Sketch of eBike emission impact</option>
-<option value="ts_ebike_share" data-sizex="8" data-sizey="2">Timeseries of cumulative eBike trips</option>
-<option value="ts_ebike_miles" data-sizex="8" data-sizey="2">Timeseries of cumulative eBike milage</option>
-<option value="ts_ebike_miles_user" data-sizex="8" data-sizey="2">Timeseries of cumulative eBike milage per user</option>
-<option value="ts_ebike_miles_proportion" data-sizex="8" data-sizey="2">Timeseries of proportion of eBike miles</option>
-<option value="ts_ebike_trips_proportion" data-sizex="8" data-sizey="2">Timeseries of mileage per user</option>
-<option value="ts_ebike_trip_individual_variation" data-sizex="8" data-sizey="2">e-bike trip variation over time</option>
-<option value="ts_ebike_mile_individual_variation" data-sizex="8" data-sizey="2">e-bike mileage variation over time</option>
+<option value="sketch_CO2impact_mode" data-sizex="6" data-sizey="4">Sketch of Mode specific emission impact</option>
+<option value="ts_mode_share" data-sizex="8" data-sizey="2">Timeseries of cumulative Mode specific trips</option>
+<option value="ts_mode_miles" data-sizex="8" data-sizey="2">Timeseries of cumulative Mode specific milage</option>
+<option value="ts_mode_miles_user" data-sizex="8" data-sizey="2">Timeseries of cumulative Mode specific milage per user</option>
+<option value="ts_mode_miles_proportion" data-sizex="8" data-sizey="2">Timeseries of proportion of Mode specific miles</option>
+<option value="ts_mode_trips_proportion" data-sizex="8" data-sizey="2">Timeseries of mileage per user</option>
+<option value="ts_mode_trip_individual_variation" data-sizex="8" data-sizey="2">e-bike trip variation over time</option>
+<option value="ts_mode_mile_individual_variation" data-sizex="8" data-sizey="2">e-bike mileage variation over time</option>
