Rephrasing some plots

--- a/frontend/metrics_program.html
+++ b/frontend/metrics_program.html
@@ -25,10 +25,10 @@
 <option value="sketch_energy_impact_mode" data-sizex="6" data-sizey="4">Sketch of Mode specific energy impact</option>
 <option value="sketch_all_mode_CO2impact" data-sizex="6" data-sizey="4">Sketch of all mode emission impact</option>
 <option value="sketch_CO2impact_mode" data-sizex="6" data-sizey="4">Sketch of Mode specific emission impact</option>
-<option value="ts_mode_share" data-sizex="8" data-sizey="2">Timeseries of cumulative Mode specific trips</option>
-<option value="ts_mode_miles" data-sizex="8" data-sizey="2">Timeseries of cumulative Mode specific milage</option>
-<option value="ts_mode_miles_user" data-sizex="8" data-sizey="2">Timeseries of cumulative Mode specific milage per user</option>
+<option value="ts_mode_share" data-sizex="8" data-sizey="2">Timeseries of Mode specific trips</option>
+<option value="ts_mode_miles" data-sizex="8" data-sizey="2">Timeseries of Mode specific milage</option>
+<option value="ts_mode_miles_user" data-sizex="8" data-sizey="2">Timeseries of Mode specific milage per user</option>
 <option value="ts_mode_miles_proportion" data-sizex="8" data-sizey="2">Timeseries of proportion of Mode specific miles</option>
 <option value="ts_mode_trips_proportion" data-sizex="8" data-sizey="2">Timeseries of mileage per user</option>
-<option value="ts_mode_trip_individual_variation" data-sizex="8" data-sizey="2">e-bike trip variation over time</option>
-<option value="ts_mode_mile_individual_variation" data-sizex="8" data-sizey="2">e-bike mileage variation over time</option>
+<option value="ts_mode_trip_individual_variation" data-sizex="8" data-sizey="2">Mode specific trip variation over time</option>
+<option value="ts_mode_mile_individual_variation" data-sizex="8" data-sizey="2">Mode specific mileage variation over time</option>
