--- a/frontend/index.html
+++ b/frontend/index.html
@@ -226,8 +226,15 @@
 					</li>
 					</ul>
 			</div>
+			<div class="row">
+				<div class="col-lg-8 text-center">
+	                <p class="mt-3" style="color:black">Developed with funding from the Vehicle Technologies Office, Office of Energy Efficiency and Renewable Energy, U.S. Department of Energy.</p>
+				</div>
+				<div class="col-lg-4 text-center">
+					<a href="https://www.energy.gov/eere/"><img class="img-fluid mb-1" style="width: 30%" src="/client/img/doe-eere.png" alt="U.S. Department of Energy Office of Energy Efficiency and Renewable Energy"></a>
+				</div>
+			</div>
 		</div>
-
 		<!-- == APPLICATION FOOTER | updated 3/2021 == -->
 		<!--stopindex-->
         <footer id="footer" class="hidden-print">
