Replace references to CanBikeCO with references to OpenPATH

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<title>NREL CanBikeCO Dashboard</title>
+		<title>NREL OpenPATH Dashboard</title>
 
 		<!-- == APPLICATION HEAD == -->
 		<!-- Google Tag Manager -->
@@ -111,7 +111,7 @@
 						</div>
 
 						<div class="col-md-6 col-xl-8 order-md-1">
-							<a href="https://canbikeco.org" class="app-name">CanBikeCO Dashboard</a>
+							<a href="https://nrel.gov/openpath" class="app-name">OpenPATH dashboard</a>
 						</div>
 
 					</div>
