force the navbar to be expanded
Specifying `navbar-expand-lg` works

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -81,7 +81,7 @@
 									<div class="row">
 										<div class="col d-flex justify-content-center mb-1">
 											<nav class="navbar navbar-light">
-												<div class="navbar-collapse collapse" id="searchbar-collapse-mobile">
+												<div class="navbar-collapse collapse navbar-expand-lg" id="searchbar-collapse-mobile">
 													<form
 														  method="get"
 														  class="site-searchbar-form form-inline ThunderstoneForm"
