Set the expand-lg on the correct navbar

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -81,7 +81,7 @@
 									<div class="row">
 										<div class="col d-flex justify-content-center mb-1">
 											<nav class="navbar navbar-light">
-												<div class="navbar-collapse collapse navbar-expand-lg" id="searchbar-collapse-mobile">
+												<div class="navbar-collapse collapse" id="searchbar-collapse-mobile">
 													<form
 														  method="get"
 														  class="site-searchbar-form form-inline ThunderstoneForm"
@@ -135,7 +135,7 @@
 
 					<!-- Navigation -->
 					<div class="navbar-collapse collapse" id="topnav-collapse">
-						<ul class="nav navbar-nav">
+						<ul class="nav navbar-nav navbar-expand-lg">
 							<li data-topnav="metric" class="navbar-text">
 								Metric:
 								<select id="metric" style="width: 100%"></select>
