--- a/frontend/index.html
+++ b/frontend/index.html
@@ -371,7 +371,9 @@
                         const dates = getMonthList(Number.parseInt(data.intro.start_month), Number.parseInt(data.intro.start_year));
                         var date_options = '';
                         for (var i=0;i<dates.length;i++){
-                            date_options += '<option value="'+ dates[i][1] + '"_' + dates[i][0] + '>' + dates[i][0] + '/' + dates[i][1] + '</option>';
+                            const paddedMonth = String(dates[i][0]).padStart(2, '0');
+                            const currYear = dates[i][1];
+                            date_options += `<option value='${currYear}_${paddedMonth}'>` + dates[i][0] + '/' + dates[i][1] + '</option>';
                         }
                         $('#date').append(date_options);
 					    $('#program').load('programs.html');
