Configure the list of metrics for programs to use dynamic the mode of interest
Attempts which did not work:
- using the backtick templates - were not replaced, probably because this was
  part of a different load
- using a different string - e.g. MODE_OF_INTEREST instead of
  `${data.intro.mode_of_interest}` - error while loading
- Removing ticks around the mode of interest - error while loading

Final solution is to load the data, and in the callback, change the text
manually using `replaceAll` and then set the options. That works properly.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -363,7 +363,12 @@
 					$.getJSON('https://raw.githubusercontent.com/e-mission/nrel-openpath-deploy-configs/main/configs/' + STUDY_CONFIG + '.nrel-op.json', function(data) {
 						// Load list of plots corresponding to study/program
 						if (data.intro.program_or_study=='program') {
-							$('#metric').load('metrics_program.html');
+                            $.get("metrics_program.html", function(response) {
+                                console.log(response);
+                                const configuredResponse = response.replaceAll("${data.intro.mode_studied}", data.intro.mode_studied);
+                                console.log("After replacing "+configuredResponse);
+                                $('#metric').append(configuredResponse);
+                            });
 						} else {
 							$('#metric').load('metrics_study.html');
 						};
