--- a/frontend/metrics_program.html
+++ b/frontend/metrics_program.html
@@ -15,20 +15,20 @@
 <option value="ts_all_modes" data-sizex="8" data-sizey="2">Timeseries of all mode shares</option>
 <!-- Mode Specific -->
 <option value="ntrips_replaced_mode" data-sizex="4" data-sizey="4">Trip miles by replaced mode</option>
-<option value="ntrips_mode_purpose" data-sizex="4" data-sizey="4">Mode specific trip count by purpose</option>
-<option value="miles_mode_replaced_mode" data-sizex="4" data-sizey="4">Mode specific trip miles by replaced mode</option>
+<option value=`ntrips_${data.intro.mode_studied}_purpose` data-sizex="4" data-sizey="4">`${data.intro.mode_studied} specific trip count by purpose`</option>
+<option value=`miles_${data.intro.mode_studied}_replaced_mode` data-sizex="4" data-sizey="4">`${data.intro.mode_studied} specific trip miles by replaced mode`</option>
 <option value="average_miles_replaced_mode" data-sizex="4" data-sizey="4">Average Miles for each replaced mode (w/Other)</option>
-<option value="ntrips_mode_per_day" data-sizex="6" data-sizey="4">Mode specific Trip frequency</option>
-<option value="ntrips_mode_per_weekday" data-sizex="6" data-sizey="4">Mode specific Trips per weekday</option>
+<option value="ntrips_${data.intro.mode_studied}_per_day" data-sizex="6" data-sizey="4">`${data.intro.mode_studied}` specific Trip frequency</option>
+<option value="ntrips_${data.intro.mode_studied}_per_weekday" data-sizex="6" data-sizey="4">`${data.intro.mode_studied}` specific Trips per weekday</option>
 <option value="sketch_all_energy_impact" data-sizex="6" data-sizey="4">Sketch of Energy Impact (kWH) by Transport Mode</option>
-<option value="sketch_all_mode_energy_impact" data-sizex="6" data-sizey="4">Sketch of Energy Impact for all confirmed trips</option>
-<option value="sketch_energy_impact_mode" data-sizex="6" data-sizey="4">Sketch of Mode specific energy impact</option>
-<option value="sketch_all_mode_CO2impact" data-sizex="6" data-sizey="4">Sketch of all mode emission impact</option>
-<option value="sketch_CO2impact_mode" data-sizex="6" data-sizey="4">Sketch of Mode specific emission impact</option>
-<option value="ts_mode_share" data-sizex="8" data-sizey="2">Timeseries of Mode specific trips</option>
-<option value="ts_mode_miles" data-sizex="8" data-sizey="2">Timeseries of Mode specific milage</option>
-<option value="ts_mode_miles_user" data-sizex="8" data-sizey="2">Timeseries of Mode specific milage per user</option>
-<option value="ts_mode_miles_proportion" data-sizex="8" data-sizey="2">Timeseries of proportion of Mode specific miles</option>
-<option value="ts_mode_trips_proportion" data-sizex="8" data-sizey="2">Timeseries of mileage per user</option>
-<option value="ts_mode_trip_individual_variation" data-sizex="8" data-sizey="2">Mode specific trip variation over time</option>
-<option value="ts_mode_mile_individual_variation" data-sizex="8" data-sizey="2">Mode specific mileage variation over time</option>
+<option value="sketch_all_${data.intro.mode_studied}_energy_impact" data-sizex="6" data-sizey="4">Sketch of Energy Impact for all confirmed trips</option>
+<option value="sketch_energy_impact_${data.intro.mode_studied}" data-sizex="6" data-sizey="4">Sketch of `${data.intro.mode_studied}` specific energy impact</option>
+<option value="sketch_all_${data.intro.mode_studied}_CO2impact" data-sizex="6" data-sizey="4">Sketch of all mode emission impact</option>
+<option value="sketch_CO2impact_${data.intro.mode_studied}" data-sizex="6" data-sizey="4">Sketch of `${data.intro.mode_studied}` specific emission impact</option>
+<option value="ts_${data.intro.mode_studied}_share" data-sizex="8" data-sizey="2">Timeseries of `${data.intro.mode_studied}` specific trips</option>
+<option value="ts_${data.intro.mode_studied}_miles" data-sizex="8" data-sizey="2">Timeseries of `${data.intro.mode_studied}` specific milage</option>
+<option value="ts_${data.intro.mode_studied}_miles_user" data-sizex="8" data-sizey="2">Timeseries of `${data.intro.mode_studied}` specific milage per user</option>
+<option value="ts_${data.intro.mode_studied}_miles_proportion" data-sizex="8" data-sizey="2">Timeseries of proportion of `${data.intro.mode_studied}` specific miles</option>
+<option value="ts_${data.intro.mode_studied}_trips_proportion" data-sizex="8" data-sizey="2">Timeseries of mileage per user</option>
+<option value="ts_${data.intro.mode_studied}_trip_individual_variation" data-sizex="8" data-sizey="2">`${data.intro.mode_studied}` specific trip variation over time</option>
+<option value="ts_${data.intro.mode_studied}_mile_individual_variation" data-sizex="8" data-sizey="2">`${data.intro.mode_studied}` specific mileage variation over time</option>
