--- a/frontend/metrics_program.html
+++ b/frontend/metrics_program.html
@@ -15,8 +15,8 @@
 <option value="ts_all_modes" data-sizex="8" data-sizey="2">Timeseries of all mode shares</option>
 <!-- Mode Specific -->
 <option value="ntrips_replaced_mode" data-sizex="4" data-sizey="4">Trip miles by replaced mode</option>
-<option value="ntrips_${data.intro.mode_studied}_purpose" data-sizex="4" data-sizey="4">`${data.intro.mode_studied} specific trip count by purpose`</option>
-<option value=`miles_${data.intro.mode_studied}_replaced_mode` data-sizex="4" data-sizey="4">`${data.intro.mode_studied} specific trip miles by replaced mode`</option>
+<option value="ntrips_${data.intro.mode_studied}_purpose" data-sizex="4" data-sizey="4">`${data.intro.mode_studied}` specific trip count by purpose</option>
+<option value=`miles_${data.intro.mode_studied}_replaced_mode` data-sizex="4" data-sizey="4">`${data.intro.mode_studied}` specific trip miles by replaced mode</option>
 <option value="average_miles_replaced_mode" data-sizex="4" data-sizey="4">Average Miles for each replaced mode (w/Other)</option>
 <option value="ntrips_${data.intro.mode_studied}_per_day" data-sizex="6" data-sizey="4">`${data.intro.mode_studied}` specific Trip frequency</option>
 <option value="ntrips_${data.intro.mode_studied}_per_weekday" data-sizex="6" data-sizey="4">`${data.intro.mode_studied}` specific Trips per weekday</option>
